# AICloudOps-KyLin

./: .gitignore  赛道作品要求参考.md  赛道项目作品要求.md
newproject/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  演示数据报告.md  视频录制脚本.md
newproject/backend/: config.py  database.py  database_mysql.py  init_demo_data.py  main.py  migrate_to_mysql.py  redis_client.py  redis_integration_example.py  requirements.txt  reset_demo_data.py  test_connections.py  verify_demo_data.py
newproject/backend/api/: routes.py
newproject/backend/core/: agent.py  demo_engine.py  llm_client.py  os_sensor.py  planner.py
newproject/backend/data/: aicops.db
newproject/backend/init-scripts/: 01-init.sql
newproject/backend/mcp/: tools.py
newproject/backend/safety/: audit_agent.py  rbac.py  rules.py  sandbox.py  validator.py
newproject/backend/utils/: audit_logger.py
newproject/data/: aicops.db
newproject/frontend/: pnpm-lock.yaml
newproject/frontend/apps/web-antd/: .env.development  package.json  vite.config.mts
newproject/frontend/apps/web-antd/src/api/: request.ts
newproject/frontend/apps/web-antd/src/api/core/: index.ts
newproject/frontend/apps/web-antd/src/layouts/: auth.vue
newproject/frontend/apps/web-antd/src/views/ai/: ai.vue
newproject/frontend/apps/web-antd/src/views/assistant/: ArchitectureView.vue  AssistantQuery.vue  AssistantSession.vue  InterceptionLog.vue  (+2 more)
newproject/frontend/internal/tsconfig/: base.json  node.json
newproject/scripts/: start-services.ps1  test_api_speed.py  test_llm_config.py  test_video_scenarios.py
(+49 files in other folders)
